--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-table-next": "^0.1.5",
     "react-bootstrap-table2-overlay": "^0.1.1",
+    "react-data-grid": "^3.0.11",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-table": "^6.8.0",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.79.0"
   },
   "scripts": {
     "start": "react-scripts start",
